  the elements in a clm object.
- clmm now computes the variance-covariance matrix with the Cholesky
  decomposition.
- makeThresholds now take ylevels rather than y as argument.
- clm.control and clmm.control are moved to control.R
- drop.cols has gained argument drop.scale which controls whether
  columns in the scale design matrix are droped if they are linearly
  dependent of columns in the nominal design matrix. This was
  previously implicitly TRUE but is now FALSE to allow fits of certain
  models.
- The list of control arguments are now storred as part of the clm
  output.
- weights, offset and S.offset can now be missing or NULL in clm.fit.
- predict.clm now allows type="eta".

2013-08-22:
- Exporting S3 print method for convergence.clm objects.

2013-08-23:
- Fixing an issue in the Hessian computation for boundary fits with
  useMatrix=FALSE and a single scalar random-effects term.
- Allowing control parameters to be passed on to nlminb (when it is
  used). A bug was fixed in getCtrlArgs and clmm.control now includes
  method="nlminb".
- Adding test for no. random effects >= no. observations for each
  r.e. term.

2013-08-25
- changing default optimizer from ucminf to nlminb
- adding grad.ctr4 to the list of gradient functions
- explicitly computing the number of objective function evaluations
  rather than relying on the optimizer's count.
- wrapping calls to optimizers in try() to catch errors that occur
  here
- adding test for non-finite parameter values in *.ssr objective
  functions.
- adding list of control parameters to list of clmm output.
- refining test of no. random effects > no. observations.
- removing ucminf control settings from clmm.control when fitting with
  nlminb.
- fixing bug with C version of NRalgv3 (conditional mode update):
  Hessian (D) values are now initialized to 1 rather than 0.

2013-08-26:
- registrering global variables.
- removing use of ':::'.

2013-08-27:
- documenting list of control parameters in clmm objects.
