@@ -207,3 +207,7 @@ March 04 2010:
 2013-08-27:
 - documenting list of control parameters in clmm objects.
 
+2013-09-27:
+- no longer importing numDeriv as we now use our own gradient and
+  hessian functions
+- moving Matrix package from Depends to Imports
